[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "This is Pre alpha, and not useful, no code worth looking at."
documentation = "http://maidsafe.net/drive/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "drive"
readme = "README.md"
repository = "https://github.com/maidsafe/drive"
version = "0.0.1"

[dependencies]
bufstream = "0.1.1"
byteorder = "0.4.2"
fuse = "~0.2.7"
libc = "~0.2.2"
regex = "0.1.41"
rustc-serialize = "0.3.16"
sodiumoxide = "0.0.9"
time = "~0.1.34"
